// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search When data is valid component renders correctly 1`] = `
<div
  className="search"
>
  <input
    className="search__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="What do you want to watch?"
    value=""
  />
  <button
    className="search__button"
    onClick={[Function]}
  >
    SEARCH
  </button>
</div>
`;

exports[`Search component renders correctly 1`] = `
<div>
  <div
    class="search"
  >
    <input
      class="search__input"
      placeholder="What do you want to watch?"
      value="Action"
    />
    <button
      class="search__button"
    >
      SEARCH
    </button>
  </div>
</div>
`;

exports[`Search renders correctly 1`] = `
<div>
  <div
    class="search"
  >
    <input
      class="search__input"
      placeholder="What do you want to watch?"
      value="Action"
    />
    <button
      class="search__button"
    >
      SEARCH
    </button>
  </div>
</div>
`;
